--- a/recipes/chocolatebacon.html
+++ b/recipes/chocolatebacon.html
@@ -7,6 +7,8 @@
     <title>Chocolate Bacon</title>
 </head>
 <body>
-    <h1>Chocolate covered Bacon</h1>
+    <h1>Chocolate Covered Bacon</h1>
+
+    <img src=""
 </body>
 </html>
