Add description, ingredients, directions
Add description, ingredients, directions, and return to main links
to all webpages.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Recipes for Pregnant Women</h1>
 
-        <a href="recipes/chocolatebacon.html">Chocolate Covered Bacon</a>
+        <img src="images/index.jpg" alt="Woman raiding the fridge">
+
+        <ul>
+            <li><a href="recipes/chocolatebacon.html">Chocolate Covered Bacon</a></li>
+            <li><a href="recipes/pickleicecream.html">Pickle Flavored Ice Cream</a></li>
+            <li><a href="recipes/mango.html">Mango!</a></li>
+        </ul>
     </body>
 </html>
