--- a/recipes/chocolatebacon.html
+++ b/recipes/chocolatebacon.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chocolate Bacon</title>
+    <title>Chocolate CoveredBacon</title>
 </head>
 <body>
     <h1>Chocolate Covered Bacon</h1>
 
-    <img src=""
+    <img src="../images/chocbacon.jpg" alt="Bacon Dipped in Chocolate">
+
+    <h2>A decadent combo of sweet and savory.</h2>
+
+    <p>Sweet meets salty in this recipe for Chocolate-Covered Bacon. If you've never tried bacon and chocolate together, you might be surprised at how well rich, semi-sweet chocolate complements the smoky flavor of crispy bacon.</p>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>1 semi-sweet bag of chocolate chips</li>
+        <li>1 pound thick cut bacon</li>
+    </ul>
+
+    <h3>Directions</h3>
+
+    <ol>
+        <li>Heat large skillet on high; add bacon strips.</li>
+        <li>Turn bacon strips over as needed with tongs.</li>
+        <li>Cook back until it’s reduced to about ¼ of its original size and appears to be crispy. (Personally I believe that the bacon should be crispy; however if you prefer your chocolate covered bacon chewy opposed to crunchy then reduce cooking time by removing your bacon earlier).</li>
+        <li>Drain bacon on papertowels to remove grease.</li>
+        <li>While the bacon is cooling fill the double boiler or medium sauce pan with water and bring to a medium heat.</li>
+        <li>Place double boiler top pan in double boiler bottom pan or put the small sauce pan in the medium sauce pan.</li>
+        <li>Slowly add chocolate morsels into top pan and stir while morsels melt. Do this until all morels have been added. (Be sure to keep stirring to prevent the chocolate from burning.).</li>
+        <li>Using your fingers or tongs carefully dip the bacon strips into the chocolate, if necessary use a spoon to spoon the melted chocolate over the bacon evenly coating it.</li>
+        <li>Once coated lay strips on cooling rack (with something underneath to catch the drips) or waxed paper lined cookie sheet. Cool in refrigerator for 15 minutes to set chocolate.</li>
+    </ol>
+
+    <h3><a href="../index.html">Back to Home</a></h3>
 </body>
 </html>
